fix: correcting repository path

--- a/package.json
+++ b/package.json
@@ -26,5 +26,5 @@
     "gh-pages": "^6.1.1",
     "vite": "^5.3.1"
   },
-  "homepage": "https://https://franciscoborn.github.io/coderhouse-react/"
+  "homepage": "https://franciscoborn.github.io/coderhouse-react/"
 }
